[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { git = "https://github.com/libp2p/rust-libp2p", features = ["dcutr", "tcp-tokio", "mdns-tokio"] }
clap = { version = "3.1", features = ["derive"] }
futures = "0.3"
futures-timer = "3.0"

tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["full"] }

anyhow = "*"
env_logger = "0.9"
log = "0.4"