[package]
name = "chat-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { git = "https://github.com/libp2p/rust-libp2p", features = ["dcutr", "tcp-tokio", "mdns-tokio"] }
clap = { version = "3.1", features = ["derive"] }
futures = "0.3.24"
futures-timer = "3.0"

tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["full"] }

anyhow = "*"
env_logger = "0.9"
log = "0.4"
rand = "*"
quinn = { version = "0.8.0", git = "https://github.com/quinn-rs/quinn.git", branch = "named-futures", default-features = false, features = ["tls-rustls", "futures-io", "futures-core"] }
rustls = { version = "0.20.2", default-features = false, features = ["dangerous_configuration"] }
if-watch = "1.1.1"
thiserror = "1.0.26"
tracing = "0.1"
rcgen = "0.9.2"
ring = "0.16.20"
x509-parser = "0.14.0"
yasna = "0.5.0"
oid-registry = "0.6.0"
webpki = "0.22.0"